@@ -1,3 +1,8 @@
+Thu Jul  9 20:27:19 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* each-substream-mapper.rb: [SR#102] emap
+	* binput.rb: ちょっと修正
+
 Thu Jul  9 18:57:58 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* bhere.rb, nhere.rb: [SR#102] here
